# ClickerScriptingLibrary

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.json  pyproject.toml
.cursor/rules/: project.mdc
.github/workflows/: publish.yml
examples/: ai_agent.py  notes.py
scripts/: ai_agent.py  airplane-mode-iphone-12.py  instagram-warmup.py  instagram.py  restart_all_devices.py  switch-screen-viewing-iphone-12.py  wake-up-phone.py
src/nomix_clicker/: __init__.py  actions.py  agent.py  api_helper.py  clicker.py  config_handler.py  environment.py  recognition.py
tests/: conftest.py  test_actions.py  test_agent.py  test_api_helper.py  test_clicker.py  test_config.py  test_package.py  test_parse_screen.py  test_post_comment.py  test_recognition.py
tools/: airplane-mode-iphone-12.py  restart_all_devices.py  switch-screen-viewing-iphone-12.py  wake-up-phone.py
utils/: __init__.py  actions.py  agent.py  api_helper.py  clicker.py  config_handler.py  environment.py  mouse_controller.py  recognition.py
